<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ProcessConfig" Id="{5ebf2b1c-88fd-4213-89cd-9f0bb31dc44c}">
    <Declaration><![CDATA[TYPE ST_ProcessConfig :
	STRUCT
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>