<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ProcessRecipe" Id="{18c34cf0-57e4-4dec-bf7b-278ff97ea5d5}">
    <Declaration><![CDATA[TYPE ST_ProcessRecipe :
	STRUCT
		RollTime : TIME := T#1S;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>